--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -6,7 +6,11 @@
 </div>
 
 <script src="http://libs.baidu.com/jquery/1.9.1/jquery.js"></script>
-<script src="{{ site.baseurl }}/assets/js/scripts.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/plugins/jquery.dlmenu.js"></script>
+<script src="{{ site.baseurl }}/assets/js/plugins/jquery.fitvids.js"></script>
+<script src="{{ site.baseurl }}/assets/js/plugins/jquery.magnific-popup.js"></script>
+<script src="{{ site.baseurl }}/assets/js/plugins/respond.js"></script>
+<script src="{{ site.baseurl }}/assets/js/main.js"></script>
 
 {% if site.duoshuo %}
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
