--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -11,7 +11,7 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
 <!-- Load Modernizr -->
-<script src="{{ site.baseurl }}/assets/js/modernizr-2.6.2.custom.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
 <!-- Icons 16x16 -->
 <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
 <!-- Icons 32x32 -->
