--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -23,7 +23,7 @@
           <h4>{{ site.owner.name }}</h4>
           <p>{{ site.owner.bio }}</p>
           <a href="http://github.com/aidistan" target="_blank"><i class="fa fa-github"></i> GitHub</a>
-          <a href="http://qiutu.org/users/1449/exercises" target="_blank"><i class="fa fa-male"></i> 囚徒健身</a>
+          <a href="http://photo.aidistan.net" target="_blank"><i class="fa fa-photo"></i> Lofter</a>
         </li>
       </ul><!-- /.dl-submenu -->
     </li>
